--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!---exercice 1-->
     <div class="container-fluid">
         <div class="row">               
             <div class="col-sm-4 text-center bg-primary border">    
@@ -24,7 +25,7 @@
                  <p>Bloc 3</p>
             </div>
         </div>
-        
+        <!--exercice 2-->
         <div class="row text-center bg-danger ">
             <div class="col-sm-2 border  ">
              <p>Bloc4</p>
